Name:                skein
Version:             0.1
Synopsis:            Skein is a family of fast secure cryptographic hash functions.
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa
Maintainer:          felipe.lessa@gmail.com
-- Copyright:
Category:            Cryptography
Build-type:          Simple

Description:
   Skein (<http://www.skein-hash.info/) is a family of fast
   secure cryptographic hash functions.  This package provides
   high-level Haskell bindings to the optimized C implementation.

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  -- Exposed-modules:
  -- Build-depends:
  -- Other-modules:
  -- Build-tools:
