Name:                skein
Version:             0.1
Synopsis:            Skein is a family of fast secure cryptographic hash functions.
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa
Maintainer:          felipe.lessa@gmail.com
-- Copyright:
Category:            Cryptography
Build-type:          Simple

Description:
    Skein (<http://www.skein-hash.info/>) is a family of fast
    secure cryptographic hash functions.  This package provides
    high-level Haskell bindings to the optimized C implementation.

Extra-source-files:
    c_impl/optimized/skein.c
    c_impl/optimized/skein.h
    c_impl/optimized/skein_block.c
    c_impl/optimized/skein_debug.c
    c_impl/optimized/skein_debug.h
    c_impl/optimized/skein_iv.h
    c_impl/optimized/skein_port.h
    c_impl/reference/skein.c
    c_impl/reference/skein.h
    c_impl/reference/skein_block.c
    c_impl/reference/skein_debug.c
    c_impl/reference/skein_debug.h
    c_impl/reference/skein_port.h

Cabal-version:       >=1.6


Flag reference
    Description: Use the reference implementation instead of the optimized one.
    Default: False



Library
    Hs-Source-Dirs: src

    Exposed-modules:
        Crypto.Skein
        Crypto.Skein.Internal

    Build-depends:
        base         >= 3   && < 5,
        bytestring   >= 0.9 && < 0.10,
        cereal       >= 0.3 && < 0.4,
        tagged       >= 0.2 && < 0.3,
        crypto-api   >= 0.6 && < 0.7

    Build-tools: hsc2hs
    GHC-options: -Wall

    Extensions:
        BangPatterns
        CPP
        ForeignFunctionInterface
        MultiParamTypeClasses

    Includes:
        skein.h

    CC-options: -O2
    if arch(i386) || arch(x86_64)
        CC-options: "-DSKEIN_NEED_SWAP=0"
    if arch(ppc) || arch(sparc)
        CC-options: "-DSKEIN_NEED_SWAP=1"

    if flag(reference)
        Include-Dirs:
            c_impl/reference
        C-sources:
            c_impl/reference/skein.c
            c_impl/reference/skein_block.c
         -- c_impl/reference/skein_debug.c -- not used
    else
        Include-Dirs:
            c_impl/optimized
        C-sources:
            c_impl/optimized/skein.c
            c_impl/optimized/skein_block.c
         -- c_impl/optimized/skein_debug.c -- not used
